# chessclub-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  admin.py  auth.py  chess_service.py  club.py  db_service.py  extensions.py  models.py  player.py  sync.py
app/static/css/: custom.css
app/templates/: base.html  index.html
app/templates/admin/: clubs.html  dashboard.html  login.html
app/templates/auth/: setup.html
app/templates/club/: _nav.html  attendance.html  leaderboard.html  matchups.html  members.html  overview.html  records.html  tournaments.html
app/templates/player/: rating_history.html
docs/: ARCHITECTURE.md  CACHE.md  CHANGELOG.md  architecture.md
