[project]
name = "chessclub-web"
version = "0.1.0"
description = "Flask web portal for chess club statistics"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "D",   # pydocstyle
]
ignore = [
    "D100",  # missing docstring in public module
    "D104",  # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[tool.ruff.format]
docstring-code-format = true
